Major update: Add awareness link system, fix authentication, resolve deadlocks
- Added AwarenessLink and LinkClick entities with full CRUD operations
- Implemented JWT-based awareness link generation and tracking
- Created fake login pages for Amazon, Facebook, Instagram simulation
- Fixed Spring Security configuration to allow public click endpoints
- Resolved database deadlock issues with atomic operations and retry logic
- Enhanced frontend with React-based phishing simulation components
- Added comprehensive error handling and user profile analytics
- Removed old static HTML files in favor of dynamic React components